Prevented title wrap

--- a/apps/intectum-website/src/styles/components/index/title.css
+++ b/apps/intectum-website/src/styles/components/index/title.css
@@ -215,8 +215,6 @@
 
 .c-home-title__scroll-icon
 {
-  width: 48px;
-
   animation-name: c-home-title__scroll-icon;
 }
 
